objects/ASI_eForm_Donation_Request__c.object
<CustomObject>
    <fields>
        <fullName>ASI_eForm_Delivery_to_Team_Name__c</fullName>
        <label>Delivery to (Team / Name)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Help_Text__c</fullName>
        <defaultValue>IF( CONTAINS($RecordType.DeveloperName , &quot;ASI_eForm_KR&quot;), 
&quot;SI. Brand Mktg A&amp;P (Supported by Brand Mktg): 브랜드 마케팅 외에 사용불가 (예외사용시 브랜드팀에 문의) (Promotion Code 필수입력)&quot;&amp;BR()&amp;
&quot;SI. Trade Mktg A&amp;P (Supported by Trade Mktg): 트레이드 예산에서 차감  예) 도우미 기증주, 도매장 샘플지원 (Promotion Code 필수입력)&quot;&amp;BR()&amp;
&quot;SF. Brand Mktg A&amp;P_Entertainment (Supported by Brand Mktg): 브랜드 마케팅 외에 사용불가 (예외사용시 브랜드팀에 문의) (Promotion Code 필수입력)&quot;&amp;BR()&amp;
&quot;SF. Trade Mktg A&amp;P_Entertainment (Supported by Trade Mktg): 지점 활동비 (권역매니저와 상의후 사용) (Promotion Code 필수입력)&quot;&amp;BR()&amp;
&quot;SE. Team/ Branch T&amp;E (Entertainment): 지점내 팀 예산안에서 사용&quot;&amp;BR()&amp;
&quot;SI. PR (PR team): 홍보팀 사용&quot;&amp;BR()&amp;
&quot;SF. Consumer or Customer Complaint: 공장 클레임팀, 홍보 소비자 지원&quot;&amp;BR()&amp;
&quot;SF. Employee Gift or Company Outing(HR): 인사팀 사용&quot;&amp;BR()
,&quot;&quot;)</defaultValue>
        <label>Help Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Order_Type__c</fullName>
        <formula>IF(ASI_eForm_Total_Amount__c &lt;0, &quot;반품&quot;, &quot;정상&quot;)</formula>
        <label>Order Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Promotion_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promotion Code</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Value does not exist or does not match filter criteria. Please select the approved status of MFM plans.</errorMessage>
            <filterItems>
                <field>ASI_MFM_Plan__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>KR Plan Read-Only</value>
            </filterItems>
            <filterItems>
                <field>ASI_MFM_Plan__c.ASI_MFM_Status__c</field>
                <operation>equals</operation>
                <value>Approved</value>
            </filterItems>
            <infoMessage>Please select the approved status of MFM plans.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_MFM_Plan__c</referenceTo>
        <relationshipLabel>Donation Requests</relationshipLabel>
        <relationshipName>Donation_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Purpose__c</fullName>
        <label>Purpose</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Request_Date__c</fullName>
        <defaultValue>Today()+1</defaultValue>
        <label>Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_Sys_Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sys Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Donation_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Sys_Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sys Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Donation_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Team_Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team /Branch</label>
        <referenceTo>ASI_TnE_Branch_Channel__c</referenceTo>
        <relationshipLabel>Donation Requests</relationshipLabel>
        <relationshipName>Donation_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Total_Amount__c</fullName>
        <label>Total Amount</label>
        <summarizedField>ASI_eForm_Donation_Request_Line_Items__c.ASI_eForm_Total_Amount__c</summarizedField>
        <summaryForeignKey>ASI_eForm_Donation_Request_Line_Items__c.ASI_eForm_Donation_Request__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Usage__c</fullName>
        <label>Usage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SI. Brand Mktg A&amp;P (Supported by Brand Mktg)</fullName>
                </value>
                <value>
                    <fullName>SI. Trade Mktg A&amp;P (Supported by Trade Mktg)</fullName>
                </value>
                <value>
                    <fullName>SF. Brand Mktg A&amp;P_Entertainment (Supported by Brand Mktg)</fullName>
                </value>
                <value>
                    <fullName>SF. Trade Mktg A&amp;P_Entertainment (Supported by Trade Mktg)</fullName>
                </value>
                <value>
                    <fullName>SE. Team/ Branch T&amp;E (Entertainment)</fullName>
                </value>
                <value>
                    <fullName>SI. PR (PR team)</fullName>
                </value>
                <value>
                    <fullName>SF. Consumer or Customer Complaint</fullName>
                </value>
                <value>
                    <fullName>SF. Employee Gift or Company Outing(HR)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Donation Request</label>
    <listViews>
        <fullName>ASI_eForm_KR_Donation_Request</fullName>
        <columns>NAME</columns>
        <columns>ASI_eForm_Team_Branch__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>ASI_eForm_Request_Date__c</columns>
        <columns>ASI_eForm_Delivery_to_Team_Name__c</columns>
        <columns>ASI_eForm_Purpose__c</columns>
        <columns>ASI_eForm_Status__c</columns>
        <columns>ASI_eForm_Usage__c</columns>
        <columns>ASI_eForm_Promotion_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>KR Donation Request</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_KOR</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_eForm_Team_Branch__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>ASI_eForm_Request_Date__c</columns>
        <columns>ASI_eForm_Delivery_to_Team_Name__c</columns>
        <columns>ASI_eForm_Purpose__c</columns>
        <columns>ASI_eForm_Status__c</columns>
        <columns>ASI_eForm_Total_Amount__c</columns>
        <columns>ASI_eForm_Order_Type__c</columns>
        <columns>ASI_eForm_Usage__c</columns>
        <columns>ASI_eForm_Promotion_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_T_E</fullName>
        <columns>NAME</columns>
        <columns>ASI_eForm_Team_Branch__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>ASI_eForm_Request_Date__c</columns>
        <columns>ASI_eForm_Delivery_to_Team_Name__c</columns>
        <columns>ASI_eForm_Purpose__c</columns>
        <columns>ASI_eForm_Status__c</columns>
        <columns>ASI_eForm_Total_Amount__c</columns>
        <columns>ASI_eForm_Order_Type__c</columns>
        <columns>ASI_eForm_Usage__c</columns>
        <columns>ASI_eForm_Promotion_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_eForm_Usage__c</field>
            <operation>equals</operation>
            <value>SE. Team/ Branch T&amp;E (Entertainment)</value>
        </filters>
        <label>All - T&amp;E</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>DR-{000000}</displayFormat>
        <label>Donation Request No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Donation Requests</pluralLabel>
    <recordTypes>
        <fullName>ASI_eForm_KR_Donation_Request</fullName>
        <active>true</active>
        <label>KR Donation Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_eForm_KR_Donation_Request_RO</fullName>
        <active>true</active>
        <label>KR Donation Request Read Only</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>ASI_eForm_KR_CheckPromotionCode</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
   CONTAINS(RecordType.DeveloperName, &apos;ASI_eForm_KR&apos;),
   OR(
      ISPICKVAL(ASI_eForm_Usage__c, &apos;SI. Brand Mktg A&amp;P (Supported by Brand Mktg)&apos;),
      ISPICKVAL(ASI_eForm_Usage__c, &apos;SI. Trade Mktg A&amp;P (Supported by Trade Mktg)&apos;),
      ISPICKVAL(ASI_eForm_Usage__c, &apos;SF. Brand Mktg A&amp;P_Entertainment (Supported by Brand Mktg)&apos;),
      ISPICKVAL(ASI_eForm_Usage__c, &apos;SF. Trade Mktg A&amp;P_Entertainment (Supported by Trade Mktg)&apos;)
   ),
   ISBLANK( ASI_eForm_Promotion_Code__c )
)</errorConditionFormula>
        <errorDisplayField>ASI_eForm_Promotion_Code__c</errorDisplayField>
        <errorMessage>Please select a Promotion Code.</errorMessage>
    </validationRules>
</CustomObject>